change files to deploy

--- a/Dockerfile-DEV
+++ b/Dockerfile-DEV
@@ -5,14 +5,11 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 
-RUN npm install -g @nestjs/cli
-
-
 COPY . .
 
 RUN chmod +x wait-for-postgres.sh
 
-RUN npm run build
+RUN npm run build:dev
 
 EXPOSE 3000
 
